--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-17.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-17.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Fortinet, IBD Stock Of The Day, Leads Cybersecurity Industry Group Amid 70% Rally	Fortinet 是今日 IBD 股票，在上涨 70% 中领跑网络安全行业集团
+  Fortinet, IBD Stock Of The Day, Leads Cybersecurity Industry Group Amid 70% Rally
 image: /assets/img/stock-of-the-day/2024-12-17.jpg
 date: 2024-12-17 17:24 -0800
 author: RYAN DEFFENBAUGH
