--- a/_columns/Swing_Trading/zh-cn/2024-11-15.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-15.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Want To Reduce Drawdowns? Selling Into Strength Is The Swing Trading Way.
+  Want To Reduce Drawdowns? Selling Into Strength Is The Swing Trading Way.	想要减少回撤？卖出强势是 Swing Trading Way。
 date: 2024-11-15 17:12 -0800
 image: /assets/img/swing-trading/2024-11-15.jpg
 author: JUSTIN NIELSEN
@@ -11,7 +11,8 @@ author: JUSTIN NIELSEN
 
 
 
-One of the hardest things to stomach as an investor is to see strong gains disappear before your eyes. You can quickly find yourself remembering where your portfolio was and waiting anxiously until it gets back up there. Of course sometimes the losses just get worse. But for swing trading, doing some selling on the way up is a key tenet that ends up protecting you from drawdowns. Here's how we applied the rule for software stocks.  
+One of the hardest things to stomach as an investor is to see strong gains disappear before your eyes. You can quickly find yourself remembering where your portfolio was and waiting anxiously until it gets back up there. Of course sometimes the losses just get worse. But for swing trading, doing some selling on the way up is a key tenet that ends up protecting you from drawdowns. Here's how we applied the rule for software stocks.  
+作为投资者，最难忍受的事情之一就是看到强劲的收益在您眼前消失。您很快就会发现自己记住了您的投资组合在哪里，并焦急地等待它回到那里。当然，有时损失只会变得更糟。但对于波段交易来说，在上涨过程中进行一些卖出是一个关键原则，最终可以保护您免受回撤。以下是我们如何对软件股票应用规则。
 
 
 
@@ -52,34 +53,43 @@ The Benefits Of Selling Into Strength
 After six consecutive days of gains, we decided to start scaling back on our position starting with a quarter trim **(3)**. One of the hardest parts of selling into strength is watching the position go up even more after you sell. And that's what IGV did the next day as it gapped up **(4)**.  
 
 
-But remember the goal isn't to sell at the top. The goal is to make as much money as you can and even more importantly keep it. Selling into strength helps a great deal with the keeping it part. But there's no free lunch. You have to be willing to sacrifice some gains in order to keep the profit you have.  
+But remember the goal isn't to sell at the top. The goal is to make as much money as you can and even more importantly keep it. Selling into strength helps a great deal with the keeping it part. But there's no free lunch. You have to be willing to sacrifice some gains in order to keep the profit you have.  
+但请记住，目标不是在顶部销售。目标是尽可能多地赚钱，更重要的是保留它。以实力推销对保持它部分有很大帮助。但是天下没有免费的午餐。你必须愿意牺牲一些收益才能保持你所拥有的利润。
 
 
-Ultimately, IGV closed poorly after gapping up and we took the opportunity to reduce another quarter position. When IGV fell more the next day **(5)**, we removed the remaining position. Our earlier sells were at higher prices and on the way up making the drawdown on IGV very slight.  
+Ultimately, IGV closed poorly after gapping up and we took the opportunity to reduce another quarter position. When IGV fell more the next day **(5)**, we removed the remaining position. Our earlier sells were at higher prices and on the way up making the drawdown on IGV very slight.  
+最终，IGV 在跳空后收盘不佳，我们借此机会再次缩小了四分之一的位置。当 IGV 在第二天 **（5）** 下跌更多时，我们删除了剩余的位置。我们早期的卖出价格较高，并且正在上涨，这使得 IGV 的回撤非常轻微。
 
 
-As much as the first sell might have hurt as IGV gapped up, it looked much better as IGV continued to fall on Friday **(6)**. As a swing trading rule, selling into strength is critical for keeping more of what you earn.  
+As much as the first sell might have hurt as IGV gapped up, it looked much better as IGV continued to fall on Friday **(6)**. As a swing trading rule, selling into strength is critical for keeping more of what you earn.  
+尽管 IGV 跳空上升，第一次卖出可能会受到伤害，但随着 IGV 在周五继续下跌 **（6），**情况看起来要好得多。作为波段交易规则，强势卖出对于保持您赚取的更多收入至关重要。
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
 
 
-[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment) 
+[Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
+Mark Minervini 对动荡的市场提出了这个违反直觉的建议](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
 
 
-[How to Smooth Your Equity Curve And Reduce Drawdowns](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading) 
+[How to Smooth Your Equity Curve And Reduce Drawdowns  
+如何平滑您的净值曲线并减少回撤](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations) 
+[How Weak Breadth Can Give You An Early Warning For Market Tops  
+弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
+[Follow Premarket And After-The-Open Action With IBD Experts  
+跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
 
 
 
