--- a/_columns/The_Big_Picture/zh-cn/2024-12-18.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-18.md
@@ -1,7 +1,19 @@
 ---
 layout: content
 title: >-
-  Stock Market Plunges After Fed Trims Rate-Cut Plans; These Signals Tell Investors To Alter Course	美联储削减降息计划后股市暴跌;这些信号告诉投资者改变方向
+  Stock Market Plunges After Fed Trims Rate-Cut Plans; These Signals Tell Investors To Alter Course	
+
+
+
+
+
+重试
+  
+        
+
+
+
+错误原因
 date: 2024-12-18 17:47 -0800
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,16 +22,31 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The Federal Reserve was in no holiday mood Wednesday as it indicated plans to cut interest rates only twice next year, a slower pace than under previous forecasts. The stock market sold off, and indexes broke below important chart levels.  
-美联储周三没有假期的心情，因为它表示明年只计划降息两次，速度低于之前的预测。股市遭到抛售，指数跌破重要的图表水平。
+The Federal Reserve was in no holiday mood Wednesday as it indicated plans to cut interest rates only twice next year, a slower pace than under previous forecasts. The stock market sold off, and indexes broke below important chart levels.[重试
+  
+ 
 
 
-Losses in the major indexes were the heaviest since at least early August and among the worst ever on a Fed decision day.  
-主要股指的损失至少是自 8 月初以来的最大跌幅，也是美联储决策日有史以来最严重的跌幅之一。
+
+错误原因](javascript:void(0))
 
 
-The S&P 500 lost nearly 3% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/) as well as its longer-term [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). The index made its lowest close since Nov. 5 and suffered its worst Fed-day loss since Jan. 29, 2009, according to Dow Jones Market Data.  
-标准普尔 500 指数下跌近 3%，收于其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)以及长期 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)下方。根据道琼斯市场数据，该指数创下 11 月 5 日以来的最低收盘价，并遭受了自 2009 年 1 月 29 日以来最严重的联邦日跌幅。
+Losses in the major indexes were the heaviest since at least early August and among the worst ever on a Fed decision day.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
+
+
+The S&P 500 lost nearly 3% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/) as well as its longer-term [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). The index made its lowest close since Nov. 5 and suffered its worst Fed-day loss since Jan. 29, 2009, according to Dow Jones Market Data.[重试
+  
+ 
+
+
+
+错误原因](javascript:void(0))
 
 
 
