--- a/_columns/The_Big_Picture/zh-cn/2024-12-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-19.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Struggles After Fed Sell-Off; Key Inflation Data Next	美联储抛售后股市陷入困境;关键通胀数据 下一个
+  Stock Market Struggles After Fed Sell-Off; Key Inflation Data Next
 date: 2024-12-19 17:43 -0800
 author: SCOTT LEHTONEN
 ---
@@ -10,12 +10,10 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market closed at session lows Thursday, as the major stock indexes struggled in the wake of Wednesday's Federal Reserve-fueled plunge.  
-周四股市收于盘中低点，主要股指在周三美联储推动的暴跌后苦苦挣扎。
+The stock market closed at session lows Thursday, as the major stock indexes struggled in the wake of Wednesday's Federal Reserve-fueled plunge.  
 
 
-The Dow Jones Industrial Average cut gains to less than 0.1%, narrowly breaking a 10-day losing streak. The S&P 500 reversed lower 0.1%. The tech-heavy Nasdaq composite also gave up solid gains to fall 0.1%, as the small cap Russell 2000 index lost 0.5%.  
-道琼斯工业平均指数将涨幅降至 0.1% 以下，勉强打破了连续 10 天的下跌。标准普尔 500 指数反转下跌 0.1%。以科技股为主的纳斯达克综合指数也回吐了稳健的涨幅，下跌 0.1%，因为小盘股罗素 2000 指数下跌 0.5%。
+The Dow Jones Industrial Average cut gains to less than 0.1%, narrowly breaking a 10-day losing streak. The S&P 500 reversed lower 0.1%. The tech-heavy Nasdaq composite also gave up solid gains to fall 0.1%, as the small cap Russell 2000 index lost 0.5%.  
 
 
 
